--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=8000
-SECRET_KEY='1234dfasf23rfda'
+SECRET_KEY='qwerty123456_InfSec'
 MONGODB_LINK='mongodb+srv://admin:admin@cluster0.ncfbtxf.mongodb.net/?retryWrites=true&w=majority'
